k8s/apps/headscale-ui/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: headscale-ui
  namespace: headscale-ui
  labels:
    app: headscale-ui
spec:
  type: ClusterIP
  selector:
    app: headscale-ui
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
