k8s/apps/headscale-ui/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headscale-ui
  namespace: headscale-ui
spec:
  parentRefs:
    - name: vpn-gateway
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /web
      backendRefs:
        - name: headscale-ui
          namespace: headscale-ui
          port: 80
